# air_watch_system

./: .env  .env.example  .gitignore  PROJECT_TECHNICAL_REVIEW.md  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/dashboard/: AQIHero.tsx  AlertCenter.tsx  ConnectionError.tsx  KPICards.tsx  MLInsights.tsx  ManualReadingForm.tsx  MeasurementsTable.tsx  OperationsPanel.tsx  TrendsCharts.tsx
frontend/src/contexts/: DashboardContext.tsx
frontend/src/hooks/: use-api.ts
frontend/src/lib/: api.ts  aqi.ts
frontend/src/pages/: Index.tsx
scripts/: bootstrap.ps1
src/air_quality_monitoring/: __init__.py  bootstrap.py  config.py  mqtt_subscriber.py
src/air_quality_monitoring.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/air_quality_monitoring/api/: app.py
src/air_quality_monitoring/dashboard/: app.py
src/air_quality_monitoring/domain/: alerts.py  aqi.py  models.py
src/air_quality_monitoring/services/: ingestion.py  ml.py  simulator.py
src/air_quality_monitoring/storage/: __init__.py  base.py  memory.py  mongo.py
