[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "air-quality-monitoring"
version = "0.1.0"
description = "IoT-based real-time air quality monitoring dashboard, API, and alert system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.118,<1.0",
  "joblib>=1.4,<2.0",
  "pandas>=2.2,<3.0",
  "plotly>=6.0,<7.0",
  "pydantic>=2.11,<3.0",
  "pymongo>=4.11,<5.0",
  "python-dotenv>=1.0,<2.0",
  "requests>=2.32,<3.0",
  "scikit-learn>=1.7,<2.0",
  "streamlit>=1.50,<2.0",
  "uvicorn[standard]>=0.37,<1.0",
]

[project.optional-dependencies]
mqtt = [
  "paho-mqtt>=2.1,<3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

